[package]
name = "worthit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tabled = "0.20.0"

[profile.release]
lto = true
opt-level = "z"